Add README and LICENSE

--- a/package.json
+++ b/package.json
@@ -1,6 +1,22 @@
 {
   "name": "changey",
   "version": "0.1.0",
+  "author": "Rodrigo Dumont <rlsdumont@gmail.com>",
+  "description": "Creates GitHub releases with an automatic change log.",
+  "tags": [ "github", "releases", "changelog", "issues", "version" ],
+  "homepage": "https://github.com/rdumont/changey",
+  "issues": "https://github.com/rdumont/changey/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rdumont/changey.git"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/rdumont/changey/master/LICENSE.txt"
+    }
+  ],
+  "main": "./bin/changey.js",
   "dependencies": {
     "colors": "^0.6.2",
     "js-yaml": "^3.0.2",
@@ -8,5 +24,11 @@
     "q": "^1.0.1",
     "request": "^2.36.0",
     "yargs": "^1.2.3"
+  },
+  "devDependencies": {
+    "coffee-script": "^1.7.1"
+  },
+  "scripts": {
+    "prepublish": "rm -f lib/*.js && rm -f bin/*.js && node_modules/.bin/coffee -b -c lib/ bin/"
   }
 }
