Fix build scripts again :+1:

--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "coffee-script": "^1.7.1"
   },
   "scripts": {
-    "prepublish": "scripts/build"
+    "prepublish": "sh scripts/build"
   }
 }
