--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "0.11"
   
 before_install:
-  - npm install -g coffee-script
+  - npm install -g coffee-script mocha
 
 deploy:
   provider: npm
