--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "coffee-script": "^1.7.1"
   },
   "scripts": {
+    "test": "mocha test/*.coffee --compilers coffee:coffee-script/register --reporter spec",
     "prepublish": "sh scripts/build.sh"
   }
 }
